<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_jiasu"
            style="@style/homeitem"
            android:drawableTop="@mipmap/icon_rocket"
            android:text="@string/jiasu"/>


        <TextView
            android:id="@+id/tv_ruanjian"
            style="@style/homeitem"
            android:drawableTop="@mipmap/icon_softmgr"
            android:text="@string/ruanjian"/>

        <TextView
            android:id="@+id/tv_jiance"
            style="@style/homeitem"
            android:drawableTop="@mipmap/icon_phonemgr"
            android:text="@string/jiance"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_tongxun"
            style="@style/homeitem"
            android:drawableTop="@mipmap/icon_telmgr"
            android:text="@string/tongxun"/>


        <TextView
            android:id="@+id/tv_wenjian"
            style="@style/homeitem"
            android:drawableTop="@mipmap/icon_filemgr"
            android:text="@string/wenjian"/>

        <TextView
            android:id="@+id/tv_laji"
            style="@style/homeitem"
            android:drawableTop="@mipmap/icon_sdclean"
            android:text="@string/laji"/>

    </LinearLayout>

</LinearLayout>