<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_soft_all"
        style="@style/app_listitem">

        <TextView
            style="@style/app_listitem_text"
            android:textSize="20sp"
            android:text="@string/allsoft"/>

        <ImageView
            style="@style/app_listitem_righticon"/>
    </RelativeLayout>

    <View style="@style/line_h_transparent"/>

    <RelativeLayout
        android:id="@+id/rl_soft_sys"
        style="@style/app_listitem">

        <TextView
            style="@style/app_listitem_text"
            android:textSize="20sp"
            android:text="@string/syssoft"/>

        <ImageView
            style="@style/app_listitem_righticon"/>
    </RelativeLayout>

    <View style="@style/line_h_transparent"/>

    <RelativeLayout
        android:id="@+id/rl_soft_use"
        style="@style/app_listitem">

        <TextView
            style="@style/app_listitem_text"
            android:textSize="20sp"
            android:text="@string/usesoft"/>

        <ImageView
            style="@style/app_listitem_righticon"/>
    </RelativeLayout>
</LinearLayout>
